Fix footer offset
This fixes the footer being out of view and always needing to be scrolled to, even when space is available on the page

--- a/sass/_sidebars.scss
+++ b/sass/_sidebars.scss
@@ -32,7 +32,6 @@
   }
 
   .sidebar-sticky-wrapper-content {
-    min-height: calc(100vh - (90px + 2rem));
     max-width: calc(100% - 330px - 1rem);
   }
 }
